styling stuff, heroku

--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -10,3 +10,25 @@
     </h3>
   </div>
 </div>
+
+<div id="accommodations" class="page-section text-center">
+  <h1>Accomodations</h1>
+</div>
+
+<div id="details" class="page-section text-center">
+  <h1>Details</h1>
+
+  <h4>Coming Soon!</h4>
+</div>
+
+<div id="wedding-party" class="page-section text-center">
+  <h1>Wedding Party</h1>
+
+  <h4>Coming Soon!</h4>
+</div>
+
+<div id="registry" class="page-section text-center">
+  <h1>Registry</h1>
+
+  <h4>Coming Soon!</h4>
+</div>
