--- a/app/views/homes/index.html.haml
+++ b/app/views/homes/index.html.haml
@@ -5,14 +5,14 @@
       July 16, 2016!
     %h3#location
       Brooklin, Maine
-#accommodations.page-section.text-center
-  %h1 Accomodations
-#details.page-section.text-center
-  %h1 Details
-  %h4 Coming Soon!
-#wedding-party.page-section.text-center
-  %h1 Wedding Party
-  %h4 Coming Soon!
-#registry.page-section.text-center
-  %h1 Registry
-  %h4 Coming Soon!
+-# #accommodations.page-section.text-center
+-#   %h1 Accomodations
+-# #details.page-section.text-center
+-#   %h1 Details
+-#   %h4 Coming Soon!
+-# #wedding-party.page-section.text-center
+-#   %h1 Wedding Party
+-#   %h4 Coming Soon!
+-# #registry.page-section.text-center
+-#   %h1 Registry
+-#   %h4 Coming Soon!
