--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,6 @@
 @import 'foundation_and_overrides';
 @import 'accommodations';
+@import 'buttons';
 @import 'fonts';
 @import 'general';
 @import 'header';
