fix sorting problems

--- a/app/views/accommodations/index.html.haml
+++ b/app/views/accommodations/index.html.haml
@@ -12,7 +12,7 @@
         .accom-header.text-center
           %h3.title= a.title
           %span.price= a.price
-          %span.distance= a.distance
+          %span.distance= "#{a.distance} minutes away"
 
         %p.notes= a.description
 
