Add form fields to accommodations

--- a/app/views/accommodations/_form.html.haml
+++ b/app/views/accommodations/_form.html.haml
@@ -6,6 +6,9 @@
   = f.label :price
   = f.text_field :price
 
+  = f.label :price_int
+  = f.text_field :price_int
+
   = f.label :distance
   = f.text_field :distance
 
@@ -20,6 +23,9 @@
 
   = f.label :website
   = f.text_field :website
+
+  = f.label :email
+  = f.text_field :email
 
   = f.label :phone
   = f.text_field :phone
