use number field

--- a/app/views/accommodations/_form.html.haml
+++ b/app/views/accommodations/_form.html.haml
@@ -7,7 +7,7 @@
   = f.text_field :price
 
   = f.label :price_int
-  = f.text_field :price_int
+  = f.number_field :price_int
 
   = f.label :distance
   = f.text_field :distance
