--- a/app/views/homes/details.html.haml
+++ b/app/views/homes/details.html.haml
@@ -1,1 +1,21 @@
-= render "coming_soon"
+.text-center
+  %h1 Friday evening, 7/15
+  %h4 Evening gathering and bonfire
+
+  .medium-6.columns.small-centered
+    = image_tag "3.png"
+
+  %h1.peach-text Saturday afternoon, 7/16
+  %h2.peach-text ~Ceremony~
+
+  .medium-6.columns.small-centered
+    = image_tag "3.png"
+
+  %h1 Saturday evening, 7/16
+  %h4 Dinner and reception
+
+  .medium-6.columns.small-centered
+    = image_tag "3.png"
+
+  %h3 More information will be forthcoming!
+  %h4 Check back once invitations are out for more details.
