--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,7 +2,7 @@
 %html
   %head
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
-    %title WeddingSite
+    %title Justin & Christina are getting married!
     = stylesheet_link_tag 'application', media: 'all'
     = csrf_meta_tags
   %body
