Add link to google docs spreadsheet

--- a/app/views/accommodations/index.html.haml
+++ b/app/views/accommodations/index.html.haml
@@ -1,3 +1,10 @@
+%h4.spreadsheet-link.text-center
+  Check out our
+  = link_to "accommodations spreadsheet", "https://docs.google.com/spreadsheets/d/1Nx3ClpQYWGmXu_NCnMM_qbw0jLxPTaCYT6M9_XvNEDA/edit?usp=sharing", target: "_blank"
+  and
+  = link_to "travel spreadsheet", "https://docs.google.com/spreadsheets/d/1Nx3ClpQYWGmXu_NCnMM_qbw0jLxPTaCYT6M9_XvNEDA/edit#gid=1771538616", target: "_blank"
+  to find friends to travel and stay with!
+
 %dl.sub-nav
   %dt Sort by:
   %dd{class: "#{'active' unless params[:order] == 'distance'}"}
