Add new (currently blank) "Directions" page

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -9,6 +9,6 @@
     %li
       = link_to "Details", "/details"
     %li
-      = link_to "Wedding Party", "/wedding-party"
+      = link_to "Directions", "/directions"
     %li
       = link_to "Registry", "/registry"
