Update details page

--- a/app/views/homes/details.html.haml
+++ b/app/views/homes/details.html.haml
@@ -1,21 +1,25 @@
 .text-center
-  %h1 Friday evening, 7/15
-  %h4 Evening gathering and bonfire
+  %h1 Friday Gathering
+  %h4 Join us on 7/15 at 6pm for a casual outdoor dinner, a bonfire, fire spinning, and good company!
+
+  %h4
+    %strong Location:
+    14 Back Road, Brooklin ME 00000
 
   .medium-6.columns.small-centered
     = image_tag "3.png"
 
-  %h1.peach-text Saturday afternoon, 7/16
-  %h2.peach-text ~Ceremony~
+  %h1.peach-text Ceremony
+  %h4 Saturday, July 16th at 3pm
+  %h4 Outdoor ceremony on the lawn - casual to semi-formal attire welcome!
+
+  %h4
+    %strong Location:
+    Pooduck Farm Road, Brooklin ME 00000
 
   .medium-6.columns.small-centered
     = image_tag "3.png"
 
-  %h1 Saturday evening, 7/16
-  %h4 Dinner and reception
-
-  .medium-6.columns.small-centered
-    = image_tag "3.png"
-
-  %h3 More information will be forthcoming!
-  %h4 Check back once invitations are out for more details.
+  %h1 Reception
+  %h4 Lawn games and refreshments by the water from 4-6pm, followed by dinner and dancing!
+  %h4 For those interested, there will be fire dancing.
