--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,8 +1,10 @@
 @import 'foundation_and_overrides';
 @import 'accommodations';
 @import 'buttons';
+@import 'checkboxes';
 @import 'fonts';
 @import 'general';
 @import 'header';
 @import 'homepage-date';
+@import 'rsvp_form';
 @import 'utility-classes';
