--- a/app/assets/stylesheets/fonts.scss
+++ b/app/assets/stylesheets/fonts.scss
@@ -18,3 +18,19 @@
   font-family: 'pompiere';
   src: font-url('Pompiere.otf');
 }
+
+@font-face {
+  font-family: 'bromello';
+  src: font-url('bromello.ttf');
+}
+
+@font-face {
+  font-family: 'StoneStick';
+  src: font-url('StoneStick.otf');
+}
+
+
+@font-face {
+  font-family: 'Debby';
+  src: font-url('Debby.otf');
+}
