--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -12,3 +12,5 @@
       = link_to "Directions", "/directions"
     %li
       = link_to "Registry", "/registry"
+    %li
+      = link_to "RSVP Online!", new_rsvp_path
