--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -124,7 +124,7 @@ $grey-blue: #9AB3C3;
 // $secondary-color: #e7e7e7;
 // $alert-color: #f04124;
 // $success-color: #43AC6A;
-// $warning-color: #f08a24;
+$warning-color: #E08088;
 // $info-color: #a0d3e8;
 
 // We use these to control various global styles
