--- a/app/assets/stylesheets/rsvp_form.scss
+++ b/app/assets/stylesheets/rsvp_form.scss
@@ -3,6 +3,13 @@
   border: 4px solid rgba(170, 170, 170, 0.4);
   padding: 20px;
 
+  .error {
+    font-style: italic;
+    color: $warning-color;
+    text-align: center;
+    margin-bottom: 0;
+  }
+
   h1 {
     text-align: center;
     font-family: 'bromello';
