Integrate transform mixin

--- a/app/assets/stylesheets/accommodations.scss
+++ b/app/assets/stylesheets/accommodations.scss
@@ -26,10 +26,10 @@
   }
 
   .website {
+    @include transform(translateX(-50%));
     margin-bottom: 0;
     position: absolute;
     bottom: 20px;
     left: 50%;
-    transform: translateX(-50%);
   }
 }
