--- a/app/assets/stylesheets/homepage-date.scss
+++ b/app/assets/stylesheets/homepage-date.scss
@@ -21,10 +21,10 @@
   position: relative;
 
   .text-wrapper {
+    @include transform(translate(-50%, -40%));
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -40%);
     width: 100%;
   }
 }
