--- a/app/views/homes/directions.haml
+++ b/app/views/homes/directions.haml
@@ -1,1 +1,39 @@
-= render "coming_soon"
+.columns.medium-10.medium-centered
+  %h1 Directions to the Ceremony
+
+  %h4 <strong>Using Google Maps:</strong>
+  %p
+    Follow directions to
+    %strong
+      = link_to "Pooduck Road, Brooklin, ME", "https://www.google.com/maps/place/Pooduck+Rd,+Brooklin,+ME+04616/@44.255336,-68.5654806,17z/data=!3m1!4b1!4m2!3m1!1s0x4cae9b0c78ee71db:0x81399421808027ae", target: "_blank"
+    (there is no street address but this works). Turn right onto Pooduck Farm Lane and park in the field where you see 'parking' signs. Someone will give you directions to walk to the ceremony at the shore. If you need a ride to the shore, please let the parking attendant know.
+
+  %h4 <strong>OR</strong>
+
+  %h4 <strong>Starting from the Tradewinds Marketplace Grocery Store, Blue Hill, ME:</strong>
+  %ul
+    %li Turn right out of Tradewinds parking lot onto 172 South/175 South. Go 2.4 miles.
+    %li Turn left onto 175 South. Go 9.3 miles.
+    %li Turn left onto Naskeag Point Road (at the Brooklin General Store). Go .6 miles.
+    %li Turn right onto Pooduck Road. Go .2 miles.
+    %li Turn right onto Pooduck Farm Lane (1st driveway on right) and park in the field where you see 'parking' signs. Someone will give you directions to walk to the ceremony at the shore.  If you need a ride to the shore, please let the parking attendant know.
+
+
+
+  %h1 Directions to the Friday gathering
+
+  %h4 <strong>Using Google Maps:</strong>
+  %p
+    Follow directions to
+    %strong
+      = link_to "14 Back Road, Brooklin, ME", "https://www.google.com/maps/place/14+Back+Rd,+Brooklin,+ME+04616/@44.2477498,-68.5459155,17z/data=!3m1!4b1!4m2!3m1!1s0x4cae9b97e10f41cb:0x38f078e5b7a7682a", target: "_blank"
+    (this isn't the actual address, but it works!).  Park on the grass just past the house (you will see 'parking' signs).  Walk down the hill toward the water.
+
+  %h4 <strong>OR</strong>
+
+  %h4 <strong>Starting from the Tradewinds Marketplace Grocery Store, Blue Hill, ME:</strong>
+  %ul
+    %li Turn right out of Tradewinds parking lot onto 172 South/175 South.  Go 2.4 miles.
+    %li Turn left onto 175 South.  Go 9.3 miles.
+    %li Turn left onto Naskeag Point Road (at the Brooklin General Store).  Go 1.8 miles.
+    %li Turn right onto Back Road.   Go 1 mile and watch for 'parking' signs just past a large white house on your left.   Park on the grass by the signs.  Walk down the hill toward the water.
