Update RSVP form

--- a/app/views/homes/details.html.haml
+++ b/app/views/homes/details.html.haml
@@ -22,4 +22,4 @@
 
   %h1 Reception
   %h4 Lawn games and refreshments by the water from 4-6pm, followed by dinner and dancing!
-  %h4 For those interested, there will be fire dancing.
+  %h4 For those interested, there will be fire spinning.
