--- a/app/assets/stylesheets/rsvp_form.scss
+++ b/app/assets/stylesheets/rsvp_form.scss
@@ -25,7 +25,9 @@
   label {
     font-family: $header-font-family;
     font-size: 25px;
+    color: black;
   }
+  
   .names {
     label {
       display: inline-block;
