--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,5 +15,6 @@
 @import 'header';
 @import 'homepage-date';
 @import 'rsvp_form';
+@import 'rsvp_index';
 @import 'thank_you';
 @import 'utility-classes';
