--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -123,7 +123,7 @@ $grey-blue: #9AB3C3;
 // $primary-color: #008CBA;
 // $secondary-color: #e7e7e7;
 // $alert-color: #f04124;
-// $success-color: #43AC6A;
+$success-color: #B2E1C3;
 $warning-color: #E08088;
 // $info-color: #a0d3e8;
 
