--- a/app/views/homes/details.html.haml
+++ b/app/views/homes/details.html.haml
@@ -1,10 +1,10 @@
 .text-center
   %h1 Friday Gathering
-  %h4 Join us on 7/15 at 6pm for a casual outdoor dinner, a bonfire, fire spinning, and good company!
-
+  %h4 Friday, July 15th at 6pm
+  %h4 Join us for a casual outdoor dinner, a bonfire, fire spinning, and good company!
   %h4
     %strong Location:
-    14 Back Road, Brooklin ME 04616
+    Back Road, Brooklin ME 04616
 
   .medium-6.columns.small-centered
     = image_tag "3.png"
