--- a/app/views/homes/directions.haml
+++ b/app/views/homes/directions.haml
@@ -26,8 +26,8 @@
   %p
     Follow directions to
     %strong
-      = link_to "Back Road, Brooklin, ME", "https://www.google.com/maps/place/Back+Rd,+Brooklin,+ME+04616/@44.2418503,-68.5466523,17z/data=!3m1!4b1!4m2!3m1!1s0x4cae9b936f9ad075:0x4d08fdbe36a5e88", target: "_blank"
-    - once you get there, drive until you see a sign for the event! (It is around 1 mile from where you turn onto Back Road.) Park on the grass just past the house (you will see parking signs).  Walk down the hill toward the water.
+      = link_to "Back Road, Brooklin, ME.", "https://www.google.com/maps/place/Back+Rd,+Brooklin,+ME+04616/@44.2418503,-68.5466523,17z/data=!3m1!4b1!4m2!3m1!1s0x4cae9b936f9ad075:0x4d08fdbe36a5e88", target: "_blank"
+    Once you get there, drive until you see a sign for the event! (It is around 1 mile from where you turn onto Back Road.) Park on the grass just past the house (you will see parking signs).  Walk down the hill toward the water.
 
   %h4 <strong>OR</strong>
 
