--- a/app/views/homes/registry.html.haml
+++ b/app/views/homes/registry.html.haml
@@ -1,1 +1,23 @@
-= render "coming_soon"
+%p Rather than receive physical gifts, we are asking our guests to please consider contributing towards one or more of these causes that are near and dear to our hearts. As part of this celebration of love and intertwining of fates, we want to come together with our loved ones to help ensure a better future for the world we all share. We've selected the following charities for their proven integrity, vision, and impact.
+
+%p 
+  %strong= link_to "Doctors Without Borders", "http://www.doctorswithoutborders.org/about-us"
+  delivers emergency medical aid to people affected by conflict, epidemics, or disasters.
+%p
+  %strong= link_to "The Guttmacher Institute", "https://www.guttmacher.org/about"
+  is committed to advancing sexual and reproductive health and rights.
+%p 
+  %strong= link_to "The BCRF", "http://www.bcrfcure.org/mission"
+  is committed to achieving prevention and a cure for breast cancer.
+%p
+  %strong= link_to "The Trevor Project, "http://www.thetrevorproject.org/section/about"
+  provides crisis intervention and suicide prevention services to LGBTQ youth.
+%p
+  %strong= link_to "The Fund for Global Human Rights", "http://globalhumanrights.org/who-we-are/our-approach/"
+  provides support to local, on-the-ground human right activists worldwide.
+%p
+  %strong= link_to "Earthjustice", "http://earthjustice.org/about"
+  is the nation's original and largest nonprofit environmental law organization.
+  
+.text-center
+  = link_to "Visit our Registry", "https://www.justgive.org/justinandchristina", class: "button huge", target: "_blank"
