--- a/app/views/homes/registry.html.haml
+++ b/app/views/homes/registry.html.haml
@@ -10,7 +10,7 @@
   %strong= link_to "The BCRF", "http://www.bcrfcure.org/mission"
   is committed to achieving prevention and a cure for breast cancer.
 %p
-  %strong= link_to "The Trevor Project, "http://www.thetrevorproject.org/section/about"
+  %strong= link_to "The Trevor Project", "http://www.thetrevorproject.org/section/about"
   provides crisis intervention and suicide prevention services to LGBTQ youth.
 %p
   %strong= link_to "The Fund for Global Human Rights", "http://globalhumanrights.org/who-we-are/our-approach/"
