Change registry link to external location

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -11,6 +11,6 @@
     %li
       = link_to "Directions", "/directions"
     %li
-      = link_to "Registry", "/registry"
+      = link_to "Registry", "https://www.justgive.org/justinandchristina", target: "_blank"
     %li
       = link_to "RSVP Online!", new_rsvp_path
