--- a/app/views/homes/directions.haml
+++ b/app/views/homes/directions.haml
@@ -13,7 +13,7 @@
   %h4 <strong>Starting from the Tradewinds Marketplace Grocery Store, Blue Hill, ME:</strong>
   %ul
     %li Turn right out of Tradewinds parking lot onto 172 South/175 South. Go 2.4 miles.
-    %li Turn left onto 175 South. Go 9.3 miles.
+    %li Turn left onto 175. Go 9.3 miles.
     %li Turn left onto Naskeag Point Road (at the Brooklin General Store). Go .6 miles.
     %li Turn right onto Pooduck Road. Go .2 miles.
     %li Turn right onto Pooduck Farm Lane (1st driveway on right) and park in the field where you see 'parking' signs. Someone will give you directions to walk to the ceremony at the shore.  If you need a ride to the shore, please let the parking attendant know.
@@ -34,6 +34,6 @@
   %h4 <strong>Starting from the Tradewinds Marketplace Grocery Store, Blue Hill, ME:</strong>
   %ul
     %li Turn right out of Tradewinds parking lot onto 172 South/175 South.  Go 2.4 miles.
-    %li Turn left onto 175 South.  Go 9.3 miles.
+    %li Turn left onto 175.  Go 9.3 miles.
     %li Turn left onto Naskeag Point Road (at the Brooklin General Store).  Go 1.8 miles.
     %li Turn right onto Back Road.   Go 1 mile and watch for 'parking' signs just past a large white house on your left.   Park on the grass by the signs.  Walk down the hill toward the water.
